# lifecycle_manager_node

./: CMakeLists.txt  README.md  package.xml
config/: 2.yaml  demo_params.yaml  params.yaml
include/demo/: demo_manager_component.hpp  demo_strategy.hpp  demo_transition_handler.hpp  demo_types.hpp
include/local_planning_manager/: common_types.hpp  local_planning_manager_component.hpp  local_planning_manager_node.hpp
include/local_planning_manager/area_strategies/: area_a_strategy.hpp  area_b_strategy.hpp  area_c_strategy.hpp
include/local_planning_manager/core/: graph.hpp  strategy.hpp  transition_handler.hpp
include/local_planning_manager/core/transition_handlers/: dwa_handlers.hpp  inplace_turn_handlers.hpp  pure_pursuit_handlers.hpp  stopping_handlers.hpp
include/local_planning_manager/demo_strategies/: area_c_strategy.hpp  demo_a_strategy.hpp  demo_b_strategy.hpp
launch/: demo_launch.py  local_planning_manager_launch.py
rviz/: demo.rviz
src/: demo_manager_component.cpp  demo_manager_node.cpp  demo_strategy.cpp  demo_trandition_handler.cpp  local_planning_manager.cpp  local_planning_manager_component.cpp  local_planning_manager_node.cpp  robot_simulator_node.cpp  slow_drive_node.cpp  stop_node.cpp  straight_drive_node.cpp
src/core/: graph.cpp
src/core/strategies/: area_a_strategy.cpp  area_b_strategy.cpp  area_c_strategy.cpp
src/core/transition_handlers/: dwa_handlers.cpp  inplace_turn_handlers.cpp  pure_pursuit_handlers.cpp  stopping_handlers.cpp
